# ftrigger

./: .gitignore  DESIGN.md  README.md  README.zh-CN.md  ftrigger.service  ftrigger.systemd.tutorial.md  ftrigger@.service  install-service.sh  llm_wiki_config.yaml  pyproject.toml  requirements.txt  test_event_filter.sh  test_real_events.yaml
.github/: dependabot.yml
.github/workflows/: ai-pr-chat.yml  ai-pr-review.yml  deploy.yml  issue-labeler.yml
ftrigger/: __init__.py  __main__.py  activity.py  config.py  executor.py  logs.py  main.py  process.py  status.py  watcher.py
