[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftrigger"
version = "0.1.0"
description = "Monitor file changes and trigger Claude CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Youpen-y", email = "yongy2022@outlook.com"}
]
keywords = ["file", "monitor", "watchdog", "claude", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Youpen-y/ftrigger"
Repository = "https://github.com/Youpen-y/ftrigger"
Issues = "https://github.com/Youpen-y/ftrigger/issues"

[project.scripts]
ftrigger = "ftrigger.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
# Note: Currently no package data files included.
# Uncomment and modify if adding YAML/config files to the package in the future.
# "ftrigger" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
